[package]
name = "sierra-mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
cairo-lang-sierra = "2.6.4"
cairo-lang-starknet-classes = "2.6.4"
clap = { version = "4.5.8", features = ["derive"] }
itertools = "0.13.0"
num-bigint = "0.4.6"
serde = "1.0.203"
serde_json = "1.0.120"
smol_str = "0.2.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
